<resources>
    <string name="app_name">Swasth</string>
    <string name="title_activity_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Home</string>
    <string name="card_no_textview">Card No.</string>
    <string name="feedback_button">Feedback</string>
    <string name="title_activity_barcode">Barcode</string>
    <string name="title_activity_feedback_summary">Feedback Summary</string>
    <string name="action_logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="login_button">Login</string>
    <string name="barcode_image_view">barcode</string>
    <string name="credits_text_view">Credits</string>
    <string name="barcode_text_view">Barcode</string>
    <string name="family_text_view">Family</string>
    <string name="centers_text_view">Centers</string>
    <string name="swasth_motto_textview">Swasth Foundation</string>
    <string name="card_no_edittext">Card No.</string>
    <string name="password_edittext">Password</string>
    <string name="username_edittext">Username</string>
    <string name="confirm_password_edittext">Confirm Password</string>
    <string name="choose_language_button">Choose Language</string>
    <string name="cancel_button">Cancel</string>
    <string name="home_dashboard">Home</string>
    <string name="language_dashboard">Language</string>
    <string name="tutorial_dashboard">Tutorial</string>
    <string name="about_dashboard">About</string>

    <string name="toast_total_credits">Credits : </string>
    <string name="toast_thankyou">Thank you for the feedback.</string>
    <string name="toast_select_choice">Select a choice!</string>
    <string name="toast_credits_after_feedback">Your Credits after feedback: </string>


    <string name="google_app_id">3533850601</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_comment">Comment</string>

</resources>